feat(NE-30): apply OpenRewrite UpgradeSpringBoot_4_0 and UpgradeJackson_2_3